// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smoke tests the tab panel 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ┌──────────────────────────────┨ Stronk test ┠───────────────────────────────┐ 
 │Pshhhh                                                                      │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`tests initialization and rendering of left placed bar 1`] = `
"                                                                                
                                          ┌─────┐                               
                                          │Pshhh│                               
                                          │h    │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                              ━━━━━━━━━━━━┷     │                               
                               Stronk test      │                               
                              ━━━━━━━━━━━━┯     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          │     │                               
                                          └─────┘                               
                                                                                
"
`;

exports[`tests initialization and rendering of right placed bar 1`] = `
"                                                                                
                              ┌─────┐                                           
                              │Pshhh│                                           
                              │h    │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     ┷━━━━━━━━━━━━                               
                              │      Stronk test                                
                              │     ┯━━━━━━━━━━━━                               
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              │     │                                           
                              └─────┘                                           
                                                                                
"
`;

exports[`tests inserting tabs at defined position 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                     Second                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`tests inserting tabs at defined position in panel 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ┌───────────────────────────┤ So │ Much │ Stonks ├───────────────────────────┐ 
 │Ahhhhh                                                                      │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`tests removal of a currently active tab 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`tests removal of a currently inactive tab 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                     Second                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`tests switching tabs 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                     First                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;
